# JetRecon

./: .gitignore  pyproject.toml
frontend/: index.html  script.js  styles.css
src/: main.py
src/middlewares/: error_handler.py
src/routers/: jobs.py
src/schemas/: execution_plan.py  jobs.py
src/services/: chunking.py  job_servies.py  job_store.py
src/utils/: config.py  errors.py  file_utils.py
