[project]
name = "jetrecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "faker>=38.2.0",
]
